# CS128HonorsProject

./: README.md
trading_bot/: Cargo.toml  applestockhistoricaldata.csv
trading_bot/src/: main.rs  market_data.rs
trading_bot/src/risk/: mod.rs  risk_manager.rs
trading_bot/src/strategy/: trader.rs
